# fnb-dataquest

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: fnb.ipynb  kerasrs_recommender.ipynb
