[project]
name = "dataquest2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=3.9.2",
    "keras-rs>=0.1.0",
    "marimo>=0.13.10",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "scikit-learn>=1.6.1",
    "visualkeras>=0.1.4",
]
